# housing_watchdog

./: Cargo.toml  README.md  TODO.md  config.toml
prev_session/: https:__www.123wonen.nl_huurwoningen_in_utrecht_sort_newest.txt  https:__www.pararius.nl_huurwoningen_utrecht_.txt
src/: driver.rs  logo.rs  main.rs  ratatui_ui.rs  scraper.rs  session.rs
